using MiddleMast.GameplayFramework;

namespace WizardsAndGoblins.Goblins
{
    internal class Goblin : Entity
    { }
}
