namespace WizardsAndGoblins
{
    public interface ISpell
    {
        void Activate();
    }
}
